# baka-bot-rs

./: .gitignore  Cargo.toml  baka-bot.service
src/: big_data.rs  gpt3.rs  main.rs  main.rs.old  syllable_counts_data.csv
