[package]
name = "baka-bot-rs"
version = "0.1.0"
authors = ["Dacode45 <davidrolandayeke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde_json = "1.0"
csv = "1.1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] 


[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
